--- a/src/app/shared/event-card/event-card.component.scss
+++ b/src/app/shared/event-card/event-card.component.scss
@@ -1,25 +1,8 @@
 div.card {
-  .card-body {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    > * {
-      margin: 0;
-      padding: 0;
-    }
-    h2,
-    h3 {
-      color: var(--accent-color);
-    }
-    h2 {
-      font-weight: 500;
-    }
-    p {
-      height: 100px;
-    }
+  img.card-img {
+    border-radius: unset;
   }
+
   button.card-button {
     width: 100%;
     background-color: var(--accent-color);
