shopping cart using signals

--- a/src/app/views/events-bilboard-view/events-bilboard-view.component.html
+++ b/src/app/views/events-bilboard-view/events-bilboard-view.component.html
@@ -1,5 +1,5 @@
 <div class="row mx-3 mx-md-0">
-  @for (item of events; track item.id) {
+  @for (item of events(); track item.id) {
     <app-event-card 
       [event]="item"
       class="col-md-6"
