--- a/src/app/views/event-detail-view/event-detail-view.component.html
+++ b/src/app/views/event-detail-view/event-detail-view.component.html
@@ -6,20 +6,31 @@
   </div>
   <div class="col-md-6">
     <div class="card">
-      <div class="row p-3 gap-3">
-        @for (item of eventDetail.sessions; track $index) {
-          <div class="col-12 d-flex justify-content-between">
-            <span>
-              Fecha: {{item.date | date:'dd/MM/yyyy' }}, Disponibilidad: {{item.availability}}
-            </span>
-            <span class="d-flex gap-2 align-items-center">
-              <a (click)="null" class="plus-less-icon">-</a>
-              {{ 0 }}
-              <a (click)="null" class="plus-less-icon">+</a>
-            </span>
+      @if(eventDetail() == null){
+        <div class="row">
+          <div class="col-12 d-flex align-items-center justify-content-center">
+            EVENT INFO NOT FOUND
           </div>
-        }
-      </div>
+        </div>
+      }@else {
+        <div class="row p-3 gap-3">
+          @for (item of eventDetail()!.sessions; track $index) {
+            <div class="col-12 d-flex align-items-center justify-content-between">
+              <span>
+                Fecha: {{item.date | date:'dd/MM/yyyy' }}, Disponibilidad: {{item.availability}}
+              </span>
+              <span class="d-flex gap-2 align-items-center">
+                <a (click)="decrease(item)" class="plus-less-icon">-</a>
+                {{getQuantity(item.date)}}
+                <a (click)="increase(item)" class="plus-less-icon">+</a>
+              </span>
+            </div>
+          }
+        </div>
+      }
     </div>
+  </div>
+  <div class="col-md-6">
+    <app-shopping-cart/>
   </div>
 </div>
