--- a/src/app/shared/shopping-cart/shopping-cart.component.html
+++ b/src/app/shared/shopping-cart/shopping-cart.component.html
@@ -1,3 +1,24 @@
-<pre>
-  {{cart() | json}}
-</pre>
+<div class="card border-0">
+  <div class="row p-3 gap-3">
+    @for (item of cart(); track $index) {
+      <div class="row">
+        <div class="col-12">
+          <h2>{{item.event.title}}</h2>
+          @for (dateItem of item.datesSelected; track $index) {
+            <div class="col-12 pb-2 d-flex align-items-center justify-content-between">
+              <span>
+                {{dateItem.date | date:'dd/MM/yyyy' }}
+              </span>
+              <span class="d-flex align-items-center gap-3">
+                {{'x' + dateItem.quantity}}
+                <a (click)="deleteDate(item.event.id, dateItem.date)" class="trash-icon-container">
+                  <img src="assets/img/trash.png" alt="Trash can">
+                </a>
+              </span>
+            </div>
+          }
+        </div>
+      </div>
+    }
+  </div>
+</div>
