last test files working

--- a/src/app/shared/event-card/event-card.component.scss
+++ b/src/app/shared/event-card/event-card.component.scss
@@ -1,5 +1,12 @@
 div.card {
+  div.card-body{
+    h2, h3{
+      width: fit-content;
+      cursor: pointer;
+    }
+  }
   img.card-img {
+    cursor: pointer;
     border-radius: unset;
   }
 
